--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,87 @@
 <footer class="footer">
 	<div class="footer__container">
+		<div class="footer__top top-footer">
+			<div class="top-footer__column top-footer__column_main">
+				<div class="top-footer__main">
+					<div class="top-footer__item top-footer__item_logo">
+						<a href="#" class="top-footer__logo">
+							<img src="@img/logo.png" alt="Logo">
+						</a>
+					</div>
+					<div class="top-footer__item top-footer__item_contacts">
+						<div class="top-footer__contacts contacts-footer">
+							<a href="tel:84991234567" class="contacts-footer__item">8-499-123-45-67</a>
+							<a href="tel:88001234567" class="contacts-footer__item">8-800-123-45-67</a>
+						</div>
+					</div>
+					<div class="top-footer__item top-footer__item_delivery">
+						<div class="top-footer__delivery delivery-footer">
+							<div class="delivery-footer__title">Доставка транспортными компаниями:</div>
+							<div class="delivery-footer__list">
+								<div class="delivery-footer__item">
+									<img src="@img/footer/delivery/01.jpg" alt="1">
+								</div>
+								<div class="delivery-footer__item">
+									<img src="@img/footer/delivery/02.jpg" alt="2">
+								</div>
+								<div class="delivery-footer__item">
+									<img src="@img/footer/delivery/03.jpg" alt="3">
+								</div>
+								<div class="delivery-footer__item">
+									<img src="@img/footer/delivery/04.jpg" alt="4">
+								</div>
+								<div class="delivery-footer__item">
+									<img src="@img/footer/delivery/05.jpg" alt="5">
+								</div>
+								<div class="delivery-footer__item">
+									<img src="@img/footer/delivery/06.jpg" alt="6">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="top-footer__item top-footer__item_pay">
+						<div class="top-footer__pay pay-footer">
+							<img src="@img/footer/pay/01.png" alt="Виза">
+							<img src="@img/footer/pay/02.png" alt="МК">
+							<img src="@img/footer/pay/03.png" alt="ВебМани">
+							<img src="@img/footer/pay/04.png" alt="Яндекс кошелёк">
+							<img src="@img/footer/pay/05.png" alt="Киви">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="top-footer__column top-footer__column_vk">
+				<div class="top-footer__vk vk-footer">
+					<div class="vk-footer__column">
+						<div id="vk_groups1"></div>
+					</div>
+					<div class="vk-footer__column">
+						<div id="vk_groups2"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="footer__bottom">
+			<div class="footer__social social-footer">
+				<div class="social-footer__item">
+					<a href="#" class="social-footer__link">
+						<img src="@img/footer/social/01.png" alt="1">
+					</a>
+				</div>
+				<div class="social-footer__item">
+					<a href="#" class="social-footer__link">
+						<img src="@img/footer/social/02.png" alt="1">
+					</a>
+				</div>
+				<div class="social-footer__item">
+					<a href="#" class="social-footer__link">
+						<img src="@img/footer/social/03.png" alt="1">
+					</a>
+				</div>
+			</div>
+			<div class="footer__copy">
+				©2015 Все права защищены.
+			</div>
+		</div>
 	</div>
 </footer>
