--- a/src/html/_head.htm
+++ b/src/html/_head.htm
@@ -7,4 +7,5 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script type="text/javascript" src="https://vk.com/js/api/openapi.js?169"></script>
 </head>
