--- a/src/page.html
+++ b/src/page.html
@@ -230,7 +230,124 @@
 						</div>
 					</div>
 					<div class="page__content">
-						контент
+						<form action="#" class="page__search search-page">
+							<div class="search-page__select">
+								<div class="search-page__value _icon-search">
+									<span>Везде</span>
+								</div>
+								<div class="search-page__categories categories-search-page">
+									<div class="categories-search-page__row">
+										<div class="categories-search-page__column">
+											<ul class="categories-search-page__list">
+												<li>
+													
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_1" data-error="Ошибка" class="checkbox__input" type="checkbox" value="1" name="form[]">
+														<label for="c_1" class="checkbox__label"><span class="checkbox__text">Беговые дорожки</span></label>
+													</div>
+												</li>
+												<li>
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_2" data-error="Ошибка" class="checkbox__input" type="checkbox" value="2" name="form[]">
+														<label for="c_2" class="checkbox__label"><span class="checkbox__text">Эллиптические тренажеры</span></label>
+													</div>
+												</li>
+												<li>
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_3" data-error="Ошибка" class="checkbox__input" type="checkbox" value="3" name="form[]">
+														<label for="c_3" class="checkbox__label"><span class="checkbox__text">Велотренажеры</span></label>
+													</div>
+												</li>
+												<li>
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_4" data-error="Ошибка" class="checkbox__input" type="checkbox" value="4" name="form[]">
+														<label for="c_4" class="checkbox__label"><span class="checkbox__text">Гребные тренажеры</span></label>
+													</div>
+												</li>
+												<li>
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_5" data-error="Ошибка" class="checkbox__input" type="checkbox" value="5" name="form[]">
+														<label for="c_5" class="checkbox__label"><span class="checkbox__text">Вибромассажеры</span></label>
+													</div>
+												</li>
+											</ul>
+										</div>
+										<div class="categories-search-page__column">
+											<ul class="categories-search-page__list">
+												<li>
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_6" data-error="Ошибка" class="checkbox__input" type="checkbox" value=6" name="form[]">
+														<label for="c_6" class="checkbox__label"><span class="checkbox__text">Теннисные столы</span></label>
+													</div>
+												</li>
+												<li>
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_7" data-error="Ошибка" class="checkbox__input" type="checkbox" value="7" name="form[]">
+														<label for="c_7" class="checkbox__label"><span class="checkbox__text">Баскетбольные щиты и стойки</span></label>
+													</div>
+												</li>
+												<li>
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_8" data-error="Ошибка" class="checkbox__input" type="checkbox" value="8" name="form[]">
+														<label for="c_8" class="checkbox__label"><span class="checkbox__text">Массажные кресла</span></label>
+													</div>
+												</li>
+												<li>
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_9" data-error="Ошибка" class="checkbox__input" type="checkbox" value="9" name="form[]">
+														<label for="c_9" class="checkbox__label"><span class="checkbox__text">Массажные столы</span></label>
+													</div>
+												</li>
+												<li>
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_10" data-error="Ошибка" class="checkbox__input" type="checkbox" value="10" name="form[]">
+														<label for="c_10" class="checkbox__label"><span class="checkbox__text">Силовые тренажеры</span></label>
+													</div>
+												</li>
+											</ul>
+										</div>
+										<div class="categories-search-page__column">
+											<ul class="categories-search-page__list">
+												<li>
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_11" data-error="Ошибка" class="checkbox__input" type="checkbox" value="11" name="form[]">
+														<label for="c_11" class="checkbox__label"><span class="checkbox__text">Батуты</span></label>
+													</div>
+												</li>
+												<li>
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_12" data-error="Ошибка" class="checkbox__input" type="checkbox" value="12" name="form[]">
+														<label for="c_12" class="checkbox__label"><span class="checkbox__text">Детские городки</span></label>
+													</div>
+												</li>
+												<li>
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_13" data-error="Ошибка" class="checkbox__input" type="checkbox" value="13" name="form[]">
+														<label for="c_13" class="checkbox__label"><span class="checkbox__text">Дачная мебель</span></label>
+													</div>
+												</li>
+												<li>
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_14" data-error="Ошибка" class="checkbox__input" type="checkbox" value="14" name="form[]">
+														<label for="c_14" class="checkbox__label"><span class="checkbox__text">Уличные спортивные комплексы</span></label>
+													</div>
+												</li>
+												<li>
+													<div class="categories-search-page__checkbox checkbox">
+														<input id="c_15" data-error="Ошибка" class="checkbox__input" type="checkbox" value="15" name="form[]">
+														<label for="c_15" class="checkbox__label"><span class="checkbox__text">Аксессуары</span></label>
+													</div>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="search-page__input">
+								<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="">
+							</div>
+							<button type="submit" class="search-page__button button">Найти</button>
+						</form>
 					</div>
 				</div>
 
