--- a/src/page.html
+++ b/src/page.html
@@ -234,13 +234,13 @@
 							<div class="search-page__select">
 								<div class="search-page__value _icon-search">
 									<span>Везде</span>
+									<span class="search-page__quantity" data-text="Выбрано:"></span>
 								</div>
 								<div class="search-page__categories categories-search-page">
 									<div class="categories-search-page__row">
 										<div class="categories-search-page__column">
 											<ul class="categories-search-page__list">
 												<li>
-													
 													<div class="categories-search-page__checkbox checkbox">
 														<input id="c_1" data-error="Ошибка" class="checkbox__input" type="checkbox" value="1" name="form[]">
 														<label for="c_1" class="checkbox__label"><span class="checkbox__text">Беговые дорожки</span></label>
