--- a/src/page.html
+++ b/src/page.html
@@ -348,14 +348,81 @@
 							</div>
 							<button type="submit" class="search-page__button button">Найти</button>
 						</form>
+
+						<div class="page__main-slider main-slider">
+							<div class="main-slider__slider">
+								<div class="main-slider__swiper">
+									<div class="main-slider__slide">
+										<div class="main-slider__content content-main-slider">
+											<div class="content-main-slider__title"><span>Мега</span>распродажа</div>
+											<div class="content-main-slider__text">
+												<p><span class="content-main-slider__text-1">Успей купить</span> тренажеры</p>
+												<p><span class="content-main-slider__text-2">по старой цене</span></p> 
+												<p>до их <span class="content-main-slider__text-3">повышения</span></p>
+											</div>
+											<div class="content-main-slider__footer">
+												<div class="content-main-slider__price _icon-rub">от 45 000</div>
+												<a href="#" class="content-main-slider__button _icon-arrows">Подробнее</a>
+											</div>
+										</div>
+										<div class="main-slider__image-ibg">
+											<img src="@img/main-slider/01.jpg" alt="Мега распродажа">
+										</div>
+									</div>
+									<div class="main-slider__slide">
+										<div class="main-slider__content content-main-slider">
+											<div class="content-main-slider__title">
+												<br><br><span>Бутсы</span>
+											</div>
+											<div class="content-main-slider__text"><br><br></div>
+											<div class="content-main-slider__footer">
+												<div class="content-main-slider__price _icon-rub">от 10 000</div>
+												<a href="#" class="content-main-slider__button _icon-arrows">Подробнее</a>
+											</div>
+										</div>
+										<div class="main-slider__image-ibg">
+											<img src="@img/main-slider/02.jpg" alt="Мега распродажа">
+										</div>
+									</div>
+									<div class="main-slider__slide">
+										<div class="main-slider__content content-main-slider">
+											<div class="content-main-slider__title"></div>
+											<div class="content-main-slider__text">
+												<br><br><br><br><br>
+											</div>
+											<div class="content-main-slider__footer">
+												<div class="content-main-slider__price _icon-rub">от 5 000</div>
+												<a href="#" class="content-main-slider__button _icon-arrows">Подробнее</a>
+											</div>
+										</div>
+										<div class="main-slider__image-ibg">
+											<img src="@img/main-slider/03.jpg" alt="Мега распродажа">
+										</div>
+									</div>
+									<div class="main-slider__slide">
+										<div class="main-slider__content content-main-slider">
+											<div class="content-main-slider__title">Товары для <span>бега</span></div>
+											<div class="content-main-slider__text">
+												<p><span class="content-main-slider__text-1">Успей купить</span> кроссовки</p>
+												<p><span class="content-main-slider__text-2">по старой цене</span></p> 
+												<p>до их <span class="content-main-slider__text-3">повышения</span></p>
+											</div>
+											<div class="content-main-slider__footer">
+												<div class="content-main-slider__price _icon-rub">от 3 000</div>
+												<a href="#" class="content-main-slider__button _icon-arrows">Подробнее</a>
+											</div>
+										</div>
+										<div class="main-slider__image-ibg">
+											<img src="@img/main-slider/04.jpg" alt="Мега распродажа">
+										</div>
+									</div> 
+								</div>
+								<div class="main-slider__dotts">
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-
-
-
-
-
-
 				@@include('html/_footer-menu.htm',{})
 			</main>
 			
