news and reviews

--- a/src/page.html
+++ b/src/page.html
@@ -8,8 +8,9 @@
 			@@include('html/_header.htm',{})
 			<main class="page">
 				<div class="page__container">
-					<div class="page__aside">
-						<div class="page__menu menu-page">
+					<!-- aside -->
+					<aside class="page__aside">
+						<nav class="page__menu menu-page">
 							<div class="menu-page__header">
 								<div class="menu-page__label">Каталог товаров</div>
 								<div class="menu-page__burger">
@@ -18,7 +19,7 @@
 									</div>
 								</div>
 							</div>
-							<nav class="menu-page__body">
+							<div class="menu-page__body">
 								<ul class="menu-page__list">
 									<li class="menu-page__item menu-page__item_parent">
 										<a href="#" class="menu-page__link _icon-arrows">Беговые дорожки</a>
@@ -144,6 +145,8 @@
 											</div>
 										</div>
 									</li>
+									<li class="menu-page__item"><a href="#" class="menu-page__link">Бег</a></li>
+									<li class="menu-page__item"><a href="#" class="menu-page__link">Футбол</a></li>
 									<li class="menu-page__item"><a href="#" class="menu-page__link">Баскетбол</a></li>
 									<li class="menu-page__item menu-page__item_parent">
 										<a href="#" class="menu-page__link _icon-arrows">Массажные кресла</a>
@@ -226,9 +229,64 @@
 									<li class="menu-page__item"><a href="#" class="menu-page__link">Уличные спортивные комплексы</a></li>
 									<li class="menu-page__item"><a href="#" class="menu-page__link">Аксессуары</a></li>
 								</ul>
-							</nav>
+							</div>
+						</nav>
+						<div class="page__news-aside news-aside">
+							<a href="#" class="news-aside__title aside-title">Новости</a>
+							<div class="news-aside__items">
+								<div class="news-aside__item item-news-aside">
+									<a href="#" class="item-news-aside__title">Снижение цен на игровые площадки Jungle Gym</a>
+									<div class="item-news-aside__body">
+										<div class="item-news-aside__time"><span>19</span>авг</div>
+										<div class="item-news-aside__text">
+											Уважаемые покупатели!
+											Мы рады сообщить вам о снижении 
+											цены с 27 июля на детский игровой 
+											комплекс
+										</div>
+									</div>
+								</div>
+								<div class="news-aside__item item-news-aside">
+									<a href="#" class="item-news-aside__title">Поступление батутов Eclipse!</a>
+									<div class="item-news-aside__body">
+										<div class="item-news-aside__time"><span>12</span>авг</div>
+										<div class="item-news-aside__text">
+											Уважаемые покупатели!
+											Мы рады сообщить вам о снижении 
+											цены с 27 июля на детский игровой 
+											комплекс
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
-					</div>
+						<div class="page__reviews-aside reviews-aside">
+							<a href="#" class="reviews-aside__title aside-title">Отзывы</a>
+							<div class="reviews-aside__items">
+								<a href="#" class="reviews-aside__item item-reviews-aside">
+									<div class="item-reviews-aside__header">
+										<div class="item-reviews-aside__name">Павел Никифоров</div>
+										<div class="item-reviews-aside__date">12.09.2021</div>
+									</div>
+									<div class="item-reviews-aside__content _icon-quote">
+										<p>Ради экономии места в тренажерном зале приобрел многофункциональный силовой тренажер Life Gear. За такую небольшую стоимость и с такими 
+										возможностями, он просто не заменим.</p>
+									</div>
+								</a>
+								<a href="#" class="reviews-aside__item item-reviews-aside">
+									<div class="item-reviews-aside__header">
+										<div class="item-reviews-aside__name">Степан Николаевич</div>
+										<div class="item-reviews-aside__date">12.09.2021</div>
+									</div>
+									<div class="item-reviews-aside__content _icon-quote">
+										<p>Спасибо за прекрасный совет, велосипед всей семье понравился и цену за него достойную запросили.</p>
+									</div>
+								</a>
+							</div>
+						</div>
+					</aside>
+					<!-- /aside -->
+					<!-- content -->
 					<div class="page__content">
 						<form action="#" class="page__search search-page">
 							<div class="search-page__select">
@@ -422,6 +480,7 @@
 							</div>
 						</div>
 					</div>
+					<!-- /content -->
 				</div>
 				@@include('html/_footer-menu.htm',{})
 			</main>
