--- a/src/home.html
+++ b/src/home.html
@@ -482,9 +482,9 @@
 							<div class="products-slider__header">
 								<h2 class="products-slider__title title">Популярные товары</h2>
 								<div class="products-slider__control">
-									<div class="products-slider__arrow products-slider__arrow_prev"></div>
+									<div class="products-slider__arrow products-slider__arrow_prev _arrow _arrow_prev"></div>
 									<div class="products-slider__navigation"></div>
-									<div class="products-slider__arrow products-slider__arrow_next"></div>
+									<div class="products-slider__arrow products-slider__arrow_next _arrow _arrow_next"></div>
 								</div>
 							</div>
 							<div class="products-slider__slider">
