fix: slider navigation current

--- a/src/home.html
+++ b/src/home.html
@@ -755,17 +755,259 @@
 										<div class="products-slider__items">
 											<div class="product-card">
 												<div class="product-card__labels">
-													<div class="product-card__label">Товар дня</div>
+													<div class="product-card__label product-card__label_new">Новинка</div>
 												</div>
 												<a href="#" class="product-card__image">
-													<img src="@img/products/02.jpg" alt="Беговые дорожка">
+													<img src="@img/products/06.jpg" alt="Беговые дорожка">
 												</a>
 												<div class="product-card__body">
-													<a href="#" class="product-card__title"> Беговая дорожка BH Fitness F1 G6414V</a>
+													<a href="#" class="product-card__title">
+														<span>BH Fitness F1 G6414V</span>Беговая дорожка
+													</a>
 													<div class="product-card__footer">
 														<div class="product-card__price product-card__price_old _icon-rub">71 990</div>
 														<a href="#" class="product-card__add _icon-basket"></a>
 														<div class="product-card__price _icon-rub">64 990</div>
+													</div>
+												</div>
+												<div class="product-card__hover hover-product-card">
+													<a href="#" class="hover-product-card__title">
+														<span>BH Fitness F1 G6414V</span>Беговая дорожка
+													</a>
+													<div class="hover-product-card__options options-product-card">
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Тип беговой дорожки:</div>
+															<div class="options-product-card__value">Электрическая</div>
+														</div>
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Скорость движения (км/ч):</div>
+															<div class="options-product-card__value">22</div>
+														</div>
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Складывание:</div>
+															<div class="options-product-card__value">Есть</div>
+														</div>
+													</div>
+													<a href="#" class="hover-product-card__basket _icon-basket"></a>
+													<div class="hover-product-card__footer">
+														<div class="hover-product-card__price hover-product-card__price_old _icon-rub">71 990</div>
+														<div class="hover-product-card__availability">в наличии</div>
+														<div class="hover-product-card__price _icon-rub">64 990</div>
+													</div>
+												</div>
+											</div>
+											<div class="product-card">
+												<div class="product-card__labels">
+													<div class="product-card__label">Товар дня</div>
+													<div class="product-card__label product-card__label_new">Новинка</div>
+												</div>
+												<a href="#" class="product-card__image">
+													<img src="@img/products/01.jpg" alt="Беговые дорожка">
+												</a>
+												<div class="product-card__body">
+													<a href="#" class="product-card__title">
+														<span>BH Fitness F1 G6414V</span>Теннисный стол
+													</a>
+													<div class="product-card__footer">
+														<a href="#" class="product-card__add _icon-basket"></a>
+														<div class="product-card__price _icon-rub">64 990</div>
+													</div>
+												</div>
+												<div class="product-card__hover hover-product-card">
+													<a href="#" class="hover-product-card__title">
+														<span>BH Fitness F1 G6414V</span>Теннисный стол
+													</a>
+													<div class="hover-product-card__options options-product-card">
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Тип беговой дорожки:</div>
+															<div class="options-product-card__value">Электрическая</div>
+														</div>
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Скорость движения (км/ч):</div>
+															<div class="options-product-card__value">22</div>
+														</div>
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Складывание:</div>
+															<div class="options-product-card__value">Есть</div>
+														</div>
+													</div>
+													<a href="#" class="hover-product-card__basket _icon-basket"></a>
+													<div class="hover-product-card__footer">
+														<div class="hover-product-card__price hover-product-card__price_old _icon-rub">71 990</div>
+														<div class="hover-product-card__availability">в наличии</div>
+														<div class="hover-product-card__price _icon-rub">64 990</div>
+													</div>
+												</div>
+											</div>
+											<div class="product-card">
+												<div class="product-card__labels">
+													<div class="product-card__label">Товар дня</div>
+													<div class="product-card__label product-card__label_new">Новинка</div>
+												</div>
+												<a href="#" class="product-card__image">
+													<img src="@img/products/03.jpg" alt="Беговые дорожка">
+												</a>
+												<div class="product-card__body">
+													<a href="#" class="product-card__title">
+														<span>BH Fitness F1 G6414V</span>Беговая дорожка Беговая дорожка Беговая дорожка Беговая дорожка
+													</a>
+													<div class="product-card__footer">
+														<a href="#" class="product-card__add _icon-basket"></a>
+														<div class="product-card__price _icon-rub">64 990</div>
+													</div>
+												</div>
+												<div class="product-card__hover hover-product-card">
+													<a href="#" class="hover-product-card__title">
+														<span>BH Fitness F1 G6414V</span>Беговая дорожка
+													</a>
+													<div class="hover-product-card__options options-product-card">
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Тип беговой дорожки:</div>
+															<div class="options-product-card__value">Электрическая</div>
+														</div>
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Скорость движения (км/ч):</div>
+															<div class="options-product-card__value">22</div>
+														</div>
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Складывание:</div>
+															<div class="options-product-card__value">Есть</div>
+														</div>
+													</div>
+													<a href="#" class="hover-product-card__basket _icon-basket"></a>
+													<div class="hover-product-card__footer">
+														<div class="hover-product-card__price hover-product-card__price_old _icon-rub">71 990</div>
+														<div class="hover-product-card__availability">в наличии</div>
+														<div class="hover-product-card__price _icon-rub">64 990</div>
+													</div>
+												</div>
+											</div>
+											<div class="product-card">
+												<div class="product-card__labels">
+													<div class="product-card__label">Товар дня</div>
+													<div class="product-card__label product-card__label_new">Новинка</div>
+												</div>
+												<a href="#" class="product-card__image">
+													<img src="@img/products/04.jpg" alt="Беговые дорожка">
+												</a>
+												<div class="product-card__body">
+													<a href="#" class="product-card__title">
+														<span>BH Fitness F1 G6414V</span>Беговая дорожка Беговая дорожка Беговая дорожка Беговая дорожка
+													</a>
+													<div class="product-card__footer">
+														<a href="#" class="product-card__add _icon-basket"></a>
+														<div class="product-card__price _icon-rub">64 990</div>
+													</div>
+												</div>
+												<div class="product-card__hover hover-product-card">
+													<a href="#" class="hover-product-card__title">
+														<span>BH Fitness F1 G6414V</span>Беговая дорожка
+													</a>
+													<div class="hover-product-card__options options-product-card">
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Тип беговой дорожки:</div>
+															<div class="options-product-card__value">Электрическая</div>
+														</div>
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Скорость движения (км/ч):</div>
+															<div class="options-product-card__value">22</div>
+														</div>
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Складывание:</div>
+															<div class="options-product-card__value">Есть</div>
+														</div>
+													</div>
+													<a href="#" class="hover-product-card__basket _icon-basket"></a>
+													<div class="hover-product-card__footer">
+														<div class="hover-product-card__price hover-product-card__price_old _icon-rub">71 990</div>
+														<div class="hover-product-card__availability">в наличии</div>
+														<div class="hover-product-card__price _icon-rub">64 990</div>
+													</div>
+												</div>
+											</div>
+											<div class="product-card">
+												<div class="product-card__labels">
+													<div class="product-card__label">Товар дня</div>
+													<div class="product-card__label product-card__label_new">Новинка</div>
+												</div>
+												<a href="#" class="product-card__image">
+													<img src="@img/products/05.jpg" alt="Беговые дорожка">
+												</a>
+												<div class="product-card__body">
+													<a href="#" class="product-card__title">
+														<span>BH Fitness F1 G6414V</span>Беговая дорожка Беговая дорожка Беговая дорожка Беговая дорожка
+													</a>
+													<div class="product-card__footer">
+														<a href="#" class="product-card__add _icon-basket"></a>
+														<div class="product-card__price _icon-rub">64 990</div>
+													</div>
+												</div>
+												<div class="product-card__hover hover-product-card">
+													<a href="#" class="hover-product-card__title">
+														<span>BH Fitness F1 G6414V</span>Беговая дорожка
+													</a>
+													<div class="hover-product-card__options options-product-card">
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Тип беговой дорожки:</div>
+															<div class="options-product-card__value">Электрическая</div>
+														</div>
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Скорость движения (км/ч):</div>
+															<div class="options-product-card__value">22</div>
+														</div>
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Складывание:</div>
+															<div class="options-product-card__value">Есть</div>
+														</div>
+													</div>
+													<a href="#" class="hover-product-card__basket _icon-basket"></a>
+													<div class="hover-product-card__footer">
+														<div class="hover-product-card__price hover-product-card__price_old _icon-rub">71 990</div>
+														<div class="hover-product-card__availability">в наличии</div>
+														<div class="hover-product-card__price _icon-rub">64 990</div>
+													</div>
+												</div>
+											</div>
+											<div class="product-card">
+												<div class="product-card__labels">
+													<div class="product-card__label">Товар дня</div>
+													<div class="product-card__label product-card__label_new">Новинка</div>
+												</div>
+												<a href="#" class="product-card__image">
+													<img src="@img/products/06.jpg" alt="Беговые дорожка">
+												</a>
+												<div class="product-card__body">
+													<a href="#" class="product-card__title">
+														<span>BH Fitness F1 G6414V</span>Беговая дорожка Беговая дорожка Беговая дорожка Беговая дорожка
+													</a>
+													<div class="product-card__footer">
+														<a href="#" class="product-card__add _icon-basket"></a>
+														<div class="product-card__price _icon-rub">64 990</div>
+													</div>
+												</div>
+												<div class="product-card__hover hover-product-card">
+													<a href="#" class="hover-product-card__title">
+														<span>BH Fitness F1 G6414V</span>Беговая дорожка
+													</a>
+													<div class="hover-product-card__options options-product-card">
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Тип беговой дорожки:</div>
+															<div class="options-product-card__value">Электрическая</div>
+														</div>
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Скорость движения (км/ч):</div>
+															<div class="options-product-card__value">22</div>
+														</div>
+														<div class="options-product-card__item">
+															<div class="options-product-card__label">Складывание:</div>
+															<div class="options-product-card__value">Есть</div>
+														</div>
+													</div>
+													<a href="#" class="hover-product-card__basket _icon-basket"></a>
+													<div class="hover-product-card__footer">
+														<div class="hover-product-card__price hover-product-card__price_old _icon-rub">71 990</div>
+														<div class="hover-product-card__availability">в наличии</div>
+														<div class="hover-product-card__price _icon-rub">64 990</div>
 													</div>
 												</div>
 											</div>
